# CraftEngineConverter

./: README.md  RULES.md  config.yml  main.py  pyproject.toml
src/: converter.py  logger_config.py  utils.py
